--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "html-to-image": "^1.11.11",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-toastify": "^10.0.6"
   },
   "devDependencies": {
     "postcss": "^8",
