--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,9 @@
     "axios": "^1.7.8",
     "file-saver": "^2.0.5",
     "html-to-image": "^1.11.11",
-    "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "next": "^14.2.18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-toastify": "^10.0.6"
   },
   "devDependencies": {
