--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.8",
     "file-saver": "^2.0.5",
     "html-to-image": "^1.11.11",
+    "localstorage-polyfill": "^1.0.1",
     "next": "^14.2.18",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
