--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.4.0",
     "axios": "^1.7.8",
     "file-saver": "^2.0.5",
     "html-to-image": "^1.11.11",
@@ -17,6 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-redux": "^9.1.2",
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.6"
   },
