--- a/dokan/package.json
+++ b/dokan/package.json
@@ -15,9 +15,6 @@
   },
   "devDependencies": {
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.0",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^3.4.1"
   }
 }
